// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Child node 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-icon pe-icon--regular\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Dark tone class + light tone 1`] = `
"<div class=\\"pe-list-tile pe-light-tone pe-list-tile--front\\"
tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content pe-list-tile__content-front\\">
      <div class=\\"pe-icon pe-icon--medium\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Dark tone class + light tone class 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--front pe-light-tone\\"
tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content pe-list-tile__content-front\\">
      <div class=\\"pe-icon pe-icon--medium\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`No options 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\"></div>
  </div>
</div>
"
`;

exports[`Option: class 1`] = `
"<div class=\\"pe-list-tile class-x\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\"></div>
  </div>
</div>
"
`;

exports[`Option: className 1`] = `
"<div class=\\"pe-list-tile className-x\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\"></div>
  </div>
</div>
"
`;

exports[`Option: compact front (Icon) 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--front\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=
    \\"pe-list-tile__content pe-list-tile__content-front pe-list-tile--compact-front\\">
    <div class=\\"pe-icon pe-icon--medium\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: content 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
        \\"false\\">
          <path d=
          \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: content 2`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div style=\\"background: rgb(197, 225, 165); padding: 24px;\\">
      The body lay naked and facedown, a deathly gray, spatters of
      blood staining the snow around it. It was minus fifteen
      degrees Celsius and a storm had passed just hours before.
    </div>
  </div>
</div>
"
`;

exports[`Option: disabled url -- dark tone class 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--disabled\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: disabled url 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--disabled\\">
  <a class=\\"pe-list-tile__primary\\" style=\\"\\" tabindex=\\"0\\" href=
  \\"#!/\\">
  <div class=\\"pe-list-tile__content\\">
    <div class=\\"pe-list-tile__title\\">
      Ancillary Justice
    </div>
  </div></a>
</div>
"
`;

exports[`Option: element 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <a class=\\"pe-list-tile__primary\\" style=\\"\\">
  <div class=\\"pe-list-tile__content\\"></div></a>
</div>
"
`;

exports[`Option: events 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Click me
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: front (Icon) 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--front\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content pe-list-tile__content-front\\">
      <div class=\\"pe-icon pe-icon--medium\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: front (avatar) 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--front\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content pe-list-tile__content-front\\">
      <div class=\\"pe-icon pe-icon--large pe-icon--avatar\\">
        <img src=
        \\"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\\">
      </div>
    </div>
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: highSubtitle 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--high-subtitle\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
      <div class=
      \\"pe-list-tile__subtitle pe-list-tile__high-subtitle\\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: highSubtitle and compact 1`] = `
"<div class=
\\"pe-list-tile pe-list-tile--compact pe-list-tile--high-subtitle\\"
tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
      <div class=
      \\"pe-list-tile__subtitle pe-list-tile__high-subtitle\\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: highSubtitle and front -- dark tone class 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--high-subtitle\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content pe-list-tile__content-front\\">
      <div class=\\"pe-icon pe-icon--large pe-icon--avatar\\">
        <img src=
        \\"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\\">
      </div>
    </div>
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
      <div class=
      \\"pe-list-tile__subtitle pe-list-tile__high-subtitle\\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div><a href=\\"#!/\\" class=\\"pe-list-tile__secondary\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
        \\"false\\">
          <path d=
          \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
          </path>
        </svg>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`Option: highSubtitle and front 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--high-subtitle\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content pe-list-tile__content-front\\">
      <div class=\\"pe-icon pe-icon--large pe-icon--avatar\\">
        <img src=
        \\"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\\">
      </div>
    </div>
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
      <div class=
      \\"pe-list-tile__subtitle pe-list-tile__high-subtitle\\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div><a href=\\"#!/\\" class=\\"pe-list-tile__secondary\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
        \\"false\\">
          <path d=
          \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
          </path>
        </svg>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`Option: highlight (themed color) 1`] = `
"<div class=
\\"pe-list-tile pe-list-tile--highlight tests-list-tile-themed-highlight-list-tile\\"
tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: hoverable 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--hoverable\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: id 1`] = `
"<div id=\\"id-x\\" class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\"></div>
  </div>
</div>
"
`;

exports[`Option: indent 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--front\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content pe-list-tile__content-front\\">
    </div>
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: ink 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: ink with ripple options 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: secondary (Icon) (RTL) 1`] = `
"<div class=\\"pe-rtl\\">
  <div class=\\"pe-list-tile pe-list-tile--subtitle\\" tabindex=\\"0\\">
    <div class=\\"pe-list-tile__primary\\" style=\\"\\">
      <div class=\\"pe-list-tile__content\\">
        <div class=\\"pe-list-tile__title\\">
          Ancillary Justice
        </div>
        <div class=\\"pe-list-tile__subtitle\\">
          The body lay naked and facedown, a deathly gray, spatters
          of blood staining the snow around it. It was minus
          fifteen degrees Celsius and a storm had passed just hours
          before.
        </div>
      </div>
    </div>
    <div class=\\"pe-list-tile__secondary\\">
      <div class=\\"pe-list-tile__content\\">
        <div class=\\"pe-icon pe-icon--medium\\">
          <div class=\\"pe-svg\\">
            <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
            focusable=\\"false\\">
              <path d=
              \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
              </path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: secondary (Icon) 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
  <div class=\\"pe-list-tile__secondary\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-icon pe-icon--medium\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: secondary (content) 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
  <div class=\\"pe-list-tile__secondary\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-icon pe-icon--regular\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: secondary (url) 1`] = `
"<div class=\\"pe-list-tile\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div><a href=\\"#!/\\" class=\\"pe-list-tile__secondary\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__content\\">
    <div class=\\"pe-icon pe-icon--medium\\">
      <div class=\\"pe-svg\\">
        <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
        \\"false\\">
          <path d=
          \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
          </path>
        </svg>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`Option: selectable 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--selectable\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: selected 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--selected\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: style (colors) 1`] = `
"<div style=
\\"color: rgb(255, 255, 255); background-color: rgb(239, 108, 0);\\"
class=\\"pe-list-tile pe-list-tile--front\\" tabindex=\\"0\\">
  <div style=\\"\\" class=\\"pe-list-tile__primary\\">
    <div class=\\"pe-list-tile__content pe-list-tile__content-front\\">
      <div class=\\"pe-icon pe-icon--medium\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
    <div class=\\"pe-list-tile__content\\" style=
    \\"color: rgb(255, 255, 255); background-color: rgb(239, 108, 0);\\">
    <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: subContent 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
      <div>
        <div style=
        \\"background: rgb(197, 225, 165); margin-top: 12px;\\">
          The body lay naked and facedown, a deathly gray, spatters
          of blood staining the snow around it. It was minus
          fifteen degrees Celsius and a storm had passed just hours
          before.
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: subtitle 1`] = `
"<div class=\\"pe-list-tile pe-list-tile--subtitle\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
      <div class=\\"pe-list-tile__subtitle\\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: title 1`] = `
"<div class=\\"pe-list-tile\\" tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Option: url 1`] = `
"<div class=\\"pe-list-tile\\">
  <a class=\\"pe-list-tile__primary\\" style=\\"\\" tabindex=\\"0\\" href=
  \\"#!/\\">
  <div class=\\"pe-list-tile__content\\">
    <div class=\\"pe-list-tile__title\\">
      Ancillary Justice
    </div>
  </div></a>
</div>
"
`;

exports[`Themed (color and font size) -- dark tone class 1`] = `
"<div class=
\\"pe-list-tile pe-list-tile--front tests-list-tile-themed-list-tile\\"
tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content pe-list-tile__content-front\\">
      <div class=\\"pe-icon pe-icon--medium\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Themed (color and font size) 1`] = `
"<div class=
\\"pe-list-tile pe-list-tile--front tests-list-tile-themed-list-tile\\"
tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content pe-list-tile__content-front\\">
      <div class=\\"pe-icon pe-icon--medium\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Themed (title running on 2 lines) 1`] = `
"<div class=\\"pe-list-tile tests-list-tile-themed-two-lines\\"
tabindex=\\"0\\">
  <div class=\\"pe-list-tile__primary\\" style=\\"\\">
    <div class=\\"pe-list-tile__content\\">
      <div class=\\"pe-list-tile__title\\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
"
`;
